--- a/TMessagesProj/src/main/res/values/strings_yuni.xml
+++ b/TMessagesProj/src/main/res/values/strings_yuni.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="AppNameNeko" translatable="false">@string/Nekogram</string>
-    <string name="Nekogram" translatable="false">Nekogram</string>
-    <string name="NekogramBeta" translatable="false">Nekogram Beta</string>
-    <string name="NekogramEmojiDialogs" translatable="false">&#128566;</string>
-    <string name="NekoSettings">Neko Settings</string>
+    <string name="AppNameYuni" translatable="false">@string/Yunigram</string>
+    <string name="Yunigram" translatable="false">Yunigram</string>
+    <string name="YunigramBeta" translatable="false">Yunigram Beta</string>
+    <string name="YunigramEmojiDialogs" translatable="false">&#128566;</string>
+    <string name="YuniSettings">Yuni Settings</string>
     <string name="IPv6">Try connecting through IPv6</string>
     <string name="MessageMenu">Message menu</string>
     <string name="HidePhone">Hide my phone number</string>
@@ -28,7 +28,7 @@
     <string name="TransparentStatusBar">Transparent status bar</string>
     <string name="EnableResidentNotification">Show a resident notification</string>
     <string name="DisableResidentNotification">Disable resident notification</string>
-    <string name="NekogramRunning">Nekogram is running</string>
+    <string name="YunigramRunning">Yunigram is running</string>
     <string name="EventType">Sidebar icon set</string>
     <string name="ChristmasHat">Show christmas hat everyday</string>
     <string name="DependsOnDate">Depends on date</string>
@@ -84,11 +84,11 @@
     <string name="IgnoreBlockedAbout">IT IS NOT REALLY HIDE! Messages are still available to view, but text will be converted to Spoiler and media won\'t auto download.</string>
     <string name="Donate">Donate</string>
     <string name="DonateAbout">Support our development.</string>
-    <string name="TranslationAbout">Help us to translate Nekogram to your language.</string>
-    <string name="Translation">Translate Nekogram</string>
+    <string name="TranslationAbout">Help us to translate Yunigram to your language.</string>
+    <string name="Translation">Translate Yunigram</string>
     <string name="GooglePlay">Google Play</string>
     <string name="ResetStickerSize">Reset sticker size</string>
-    <string name="OfficialChannelUsername">nekoupdates</string>
+    <string name="OfficialChannelUsername">yuniupdates</string>
     <string name="RestartAppToTakeEffect">Restart the app to take effect.</string>
     <string name="DisableAppBarShadow">Disable title bar shadow</string>
     <string name="MediaPreview">Media preview in dialog list</string>
@@ -102,7 +102,7 @@
     <string name="AutoPauseVideoAbout">When lock screen/switch to background.</string>
     <string name="DisableProximityEvents">Disable proximity events</string>
     <string name="CustomEmojiTypeface">Custom emoji font</string>
-    <string name="Page1Message2">Nekogram is an **unofficial** messaging app\nthat uses Telegram\'s API.</string>
+    <string name="Page1Message2">Yunigram is an **unofficial** messaging app\nthat uses Telegram\'s API.</string>
     <string name="MapDriftingFix">Map drifting fix for Mainland China</string>
     <string name="IncreaseVoiceMessageQuality">Increase voice messages quality</string>
     <string name="DisableInstantCamera">Disable instant camera</string>
@@ -138,7 +138,7 @@
     <string name="WsEnableTls">Enable TLS</string>
     <string name="WsLocalProxy">Local proxy</string>
     <string name="WsEnableDoh">Enable DoH</string>
-    <string name="UpdateNekogram">Update Nekogram</string>
+    <string name="UpdateYunigram">Update Yunigram</string>
     <string name="TranslationTarget">Target language</string>
     <string name="TranslationTargetApp">Follow app</string>
     <string name="Translator">Translator</string>
@@ -166,18 +166,18 @@
     <string name="MutualContact">Mutual contact</string>
     <string name="MutualContactDescription">This contact is a mutual contact.</string>
     <string name="NoUpdateAvailable">No update available.</string>
-    <string name="InviteTextNeko">Hey, I\'m using Nekogram to chat. Join me! Download it here: %1$s</string>
-    <string name="ShareNekogram">Share Nekogram...</string>
-    <string name="NekogramVersion">Nekogram %1$s\nBased on Telegram %2$s\nDesigned by %3$s</string>
+    <string name="InviteTextYuni">Hey, I\'m using Yunigram to chat. Join me! Download it here: %1$s</string>
+    <string name="ShareYunigram">Share Yunigram...</string>
+    <string name="YunigramVersion">Yunigram %1$s\nBased on Telegram %2$s\nDesigned by %3$s</string>
     <string name="UpdateInstalling">Installing update...</string>
-    <string name="UpdateInstallingRelaunch">Nekogram will relaunch when update completes.</string>
+    <string name="UpdateInstallingRelaunch">Yunigram will relaunch when update completes.</string>
     <string name="UpdateFailedToInstall">Failed to install update: %d</string>
     <string name="QRLoginMessage">Scan QRCode with another device to login.</string>
     <string name="QRLoginTitle">QR Login</string>
     <string name="NoTranslatorAppInstalled">You don\'t have applications that can handle translate intent, please install one to continue</string>
     <string name="DisableVoiceMessagesAutoPlay">Disable auto-play of voice messages</string>
     <string name="TranslatorType">Type</string>
-    <string name="TranslatorTypeNeko">In message</string>
+    <string name="TranslatorTypeYuni">In message</string>
     <string name="TranslatorTypeTG">Popup dialog</string>
     <string name="TranslatorTypeExternal">External app</string>
     <string name="CopyPhoto">Copy photo</string>
@@ -190,7 +190,7 @@
     <string name="SaveToDownloadCount_other">Saving %1$d files to downloads</string>
     <string name="ThemesChannel">Themes channel</string>
     <string name="SelectAnIcon">Choose an icon</string>
-    <string name="AppLinkNotVerifiedMessage">For Android 12 and newer, you need to manually add link to verified links in order to open t.me links in Nekogram.</string>
+    <string name="AppLinkNotVerifiedMessage">For Android 12 and newer, you need to manually add link to verified links in order to open t.me links in Yunigram.</string>
     <string name="AppLinkNotVerifiedTitle">App links not verified</string>
     <string name="AutoTranslate">Auto translate</string>
     <string name="AutoTranslateAbout">Automatically translate messages that are in another language.</string>
