--- a/TMessagesProj/src/main/res/values-af/strings_neko.xml
+++ b/TMessagesProj/src/main/res/values-af/strings_neko.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="NekoSettings">afrah&lt;/3</string>
+    <string name="YuniSettings">afrah&lt;/3</string>
     <string name="IPv6">saya </string>
     <string name="MessageMenu">suka</string>
     <string name="HidePhone">naqi&lt;\3</string>
