--- a/TMessagesProj/src/main/res/values-ar/strings_neko.xml
+++ b/TMessagesProj/src/main/res/values-ar/strings_neko.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="NekoSettings">إعدادات نيكو</string>
+    <string name="YuniSettings">إعدادات نيكو</string>
     <string name="IPv6">مُحاولة الاتصال عبر IPv6</string>
     <string name="MessageMenu">اختيارات ضغطة الرسائل</string>
     <string name="HidePhone">إخفاء رقم هاتفي</string>
@@ -23,7 +23,7 @@
     <string name="TransparentStatusBar">شريط الحالة الشفاف</string>
     <string name="EnableResidentNotification">إظهار إشعارٌ دائمُ</string>
     <string name="DisableResidentNotification">تعطيل الإشعارات</string>
-    <string name="NekogramRunning">نيكوغرام قيدُ التشغيل</string>
+    <string name="YunigramRunning">نيكوغرام قيدُ التشغيل</string>
     <string name="EventType">مجموعة أيقونات الشريط الجانبي</string>
     <string name="ChristmasHat">إظهار قبعة عيد الميلاد يومياً</string>
     <string name="DependsOnDate">يعتمد علىٰ التاريخ</string>
@@ -131,7 +131,7 @@
     <string name="WsEnableTls">تمكين TLS</string>
     <string name="WsLocalProxy">بروكسي محلي</string>
     <string name="WsEnableDoh">تمكين DoH</string>
-    <string name="UpdateNekogram">تحديث نيكوغرام</string>
+    <string name="UpdateYunigram">تحديث نيكوغرام</string>
     <string name="TranslationTarget">اللغة المراد الترجمة إليها</string>
     <string name="TranslationTargetApp">لغة التطبيق</string>
     <string name="Translator">مترجم</string>
