--- a/TMessagesProj/src/main/res/values-ca/strings_neko.xml
+++ b/TMessagesProj/src/main/res/values-ca/strings_neko.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="NekoSettings">Мама</string>
+    <string name="YuniSettings">Мама</string>
     <!-- Accessibility -->
 </resources>
