--- a/TMessagesProj/src/main/res/values-es/strings_neko.xml
+++ b/TMessagesProj/src/main/res/values-es/strings_neko.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="NekoSettings">Configuraciones de Neko</string>
+    <string name="YuniSettings">Configuraciones de Neko</string>
     <string name="IPv6">Intentar conectarse a través de IPv6</string>
     <string name="MessageMenu">Menú contextual</string>
     <string name="HidePhone">Ocultar mi número de teléfono</string>
@@ -24,7 +24,7 @@
     <string name="TransparentStatusBar">Barra de estado transparente</string>
     <string name="EnableResidentNotification">Mostrar una notificación permanente</string>
     <string name="DisableResidentNotification">Desactivar notificación permanente</string>
-    <string name="NekogramRunning">Nekogram está en funcionamiento</string>
+    <string name="YunigramRunning">Nekogram está en funcionamiento</string>
     <string name="EventType">Conjunto de iconos de la barra lateral</string>
     <string name="ChristmasHat">Mostrar sombrero de navidad cada día</string>
     <string name="DependsOnDate">Depende de la fecha</string>
@@ -131,7 +131,7 @@
     <string name="WsEnableTls">Activar TLS</string>
     <string name="WsLocalProxy">Proxy local</string>
     <string name="WsEnableDoh">Habilitar DoH</string>
-    <string name="UpdateNekogram">Actualizar Nekogram</string>
+    <string name="UpdateYunigram">Actualizar Nekogram</string>
     <string name="TranslationTarget">Idioma objetivo</string>
     <string name="TranslationTargetApp">Seguir app</string>
     <string name="Translator">Traductor</string>
