--- a/TMessagesProj/src/main/res/values-fr/strings_neko.xml
+++ b/TMessagesProj/src/main/res/values-fr/strings_neko.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="NekoSettings">Paramètres Neko</string>
+    <string name="YuniSettings">Paramètres Neko</string>
     <string name="IPv6">Essayez de se connecter en IPv6</string>
     <string name="MessageMenu">Menu de message</string>
     <string name="HidePhone">Masquer mon numéro de téléphone</string>
@@ -23,7 +23,7 @@
     <string name="TransparentStatusBar">Barre de notification transparente</string>
     <string name="EnableResidentNotification">Afficher une notification de résident</string>
     <string name="DisableResidentNotification">Désactiver la notification de résident</string>
-    <string name="NekogramRunning">Nekogram est en cours d\'exécution</string>
+    <string name="YunigramRunning">Nekogram est en cours d\'exécution</string>
     <string name="EventType">Icônes de la barre latérale</string>
     <string name="ChristmasHat">Afficher le chapeau de Noël tous les jours</string>
     <string name="DependsOnDate">Selon la date</string>
@@ -129,7 +129,7 @@
     <string name="WsEnableTls">Activer le TLS</string>
     <string name="WsLocalProxy">Proxy local</string>
     <string name="WsEnableDoh">Activer le DoH</string>
-    <string name="UpdateNekogram">Mettre à jour Nekogram</string>
+    <string name="UpdateYunigram">Mettre à jour Nekogram</string>
     <string name="TranslationTarget">Langue cible</string>
     <string name="TranslationTargetApp">Comme l\'application</string>
     <string name="Translator">Traducteur</string>
