--- a/TMessagesProj/src/main/res/values-id/strings_neko.xml
+++ b/TMessagesProj/src/main/res/values-id/strings_neko.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="NekoSettings">Pengaturan Neko</string>
+    <string name="YuniSettings">Pengaturan Neko</string>
     <string name="IPv6">Coba sambungkan melalui IPv6</string>
     <string name="MessageMenu">Menu pada pesan</string>
     <string name="HidePhone">Sembunyikan nomor telepon saya</string>
@@ -23,7 +23,7 @@
     <string name="TransparentStatusBar">Bilah status transparan</string>
     <string name="EnableResidentNotification">Tampilkan pemberitahuan tetap</string>
     <string name="DisableResidentNotification">Matikan pemberitahuan tetap</string>
-    <string name="NekogramRunning">Nekogram sedang berjalan</string>
+    <string name="YunigramRunning">Nekogram sedang berjalan</string>
     <string name="EventType">Ikon menu samping</string>
     <string name="ChristmasHat">Tampilkan topi Natal setiap hari</string>
     <string name="DependsOnDate">Tergantung tanggal</string>
@@ -130,7 +130,7 @@
     <string name="WsEnableTls">Nyalakan TLS</string>
     <string name="WsLocalProxy">Proksi lokal</string>
     <string name="WsEnableDoh">Nyalakan DoH</string>
-    <string name="UpdateNekogram">Perbarui Nekogram</string>
+    <string name="UpdateYunigram">Perbarui Nekogram</string>
     <string name="TranslationTarget">Bahasa tujuan</string>
     <string name="TranslationTargetApp">Ikuti aplikasi</string>
     <string name="Translator">Penerjemah</string>
