--- a/TMessagesProj/src/main/res/values-it/strings_neko.xml
+++ b/TMessagesProj/src/main/res/values-it/strings_neko.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="NekoSettings">Impostazioni Neko</string>
+    <string name="YuniSettings">Impostazioni Neko</string>
     <string name="IPv6">Prova a connetterti via IPv6</string>
     <string name="MessageMenu">Menu messaggio</string>
     <string name="HidePhone">Nascondi il mio numero</string>
@@ -23,7 +23,7 @@
     <string name="TransparentStatusBar">Barra di stato trasparente</string>
     <string name="EnableResidentNotification">Mostra notifica persistente</string>
     <string name="DisableResidentNotification">Disabilita notifica persistente</string>
-    <string name="NekogramRunning">Nekogram è in esecuzione</string>
+    <string name="YunigramRunning">Nekogram è in esecuzione</string>
     <string name="EventType">Set di icone barra laterale</string>
     <string name="ChristmasHat">Mostra il cappello di Natale ogni giorno</string>
     <string name="DependsOnDate">Dipende dalla data</string>
@@ -130,7 +130,7 @@
     <string name="WsEnableTls">Abilita TLS</string>
     <string name="WsLocalProxy">Proxy locale</string>
     <string name="WsEnableDoh">Abilita DoH</string>
-    <string name="UpdateNekogram">Aggiorna Nekogram</string>
+    <string name="UpdateYunigram">Aggiorna Nekogram</string>
     <string name="TranslationTarget">Lingua di destinazione</string>
     <string name="TranslationTargetApp">Segui l\'app</string>
     <string name="Translator">Traduttore</string>
