--- a/TMessagesProj/src/main/res/values-ko/strings_neko.xml
+++ b/TMessagesProj/src/main/res/values-ko/strings_neko.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="NekoSettings">네코그램 설정</string>
+    <string name="YuniSettings">네코그램 설정</string>
     <string name="IPv6">IPv6 를 통한 접속</string>
     <string name="MessageMenu">메세지 메뉴</string>
     <string name="HidePhone">내 번호 숨기기</string>
@@ -24,7 +24,7 @@
     <string name="TransparentStatusBar">투명 상태 표시줄</string>
     <string name="EnableResidentNotification">참가자 알림 표시</string>
     <string name="DisableResidentNotification">참가자 알림 중지</string>
-    <string name="NekogramRunning">네코그램이 실행 중 입니다</string>
+    <string name="YunigramRunning">네코그램이 실행 중 입니다</string>
     <string name="EventType">사이드바 아이콘 세트</string>
     <string name="ChristmasHat">크리스마스 모자 매일 보여주기</string>
     <string name="DependsOnDate">날짜에 따라</string>
@@ -133,7 +133,7 @@
     <string name="WsEnableTls">TLS 활성화</string>
     <string name="WsLocalProxy">로컬 프록시</string>
     <string name="WsEnableDoh">DoH 활성화</string>
-    <string name="UpdateNekogram">Nekogram 업데이트</string>
+    <string name="UpdateYunigram">Nekogram 업데이트</string>
     <string name="TranslationTarget">번역 언어</string>
     <string name="TranslationTargetApp">기기 언어 따라가기</string>
     <string name="Translator">번역기</string>
