--- a/TMessagesProj/src/main/res/values-pt-rBR/strings_neko.xml
+++ b/TMessagesProj/src/main/res/values-pt-rBR/strings_neko.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="NekoSettings">Configurações Neko</string>
+    <string name="YuniSettings">Configurações Neko</string>
     <string name="IPv6">Tentar conexão via IPv6</string>
     <string name="MessageMenu">Menu de mensagens</string>
     <string name="HidePhone">Ocultar meu número de telefone</string>
@@ -23,7 +23,7 @@
     <string name="TransparentStatusBar">Barra de status transparente</string>
     <string name="EnableResidentNotification">Mostrar notificação de residente</string>
     <string name="DisableResidentNotification">Desativar notificação persistente</string>
-    <string name="NekogramRunning">Nekogram está em execução</string>
+    <string name="YunigramRunning">Nekogram está em execução</string>
     <string name="EventType">Conjunto de ícones da barra lateral</string>
     <string name="ChristmasHat">Mostrar chapéu de Natal todos os dias</string>
     <string name="DependsOnDate">Depende da data</string>
@@ -131,7 +131,7 @@
     <string name="WsEnableTls">Habilitar TLS</string>
     <string name="WsLocalProxy">Proxy local</string>
     <string name="WsEnableDoh">Habilitar TLS</string>
-    <string name="UpdateNekogram">Atualizar Nekogram</string>
+    <string name="UpdateYunigram">Atualizar Nekogram</string>
     <string name="TranslationTarget">Idioma de destino</string>
     <string name="TranslationTargetApp">Seguir o aplicativo</string>
     <string name="Translator">Tradutor</string>
