--- a/TMessagesProj/src/main/res/values-pt/strings_neko.xml
+++ b/TMessagesProj/src/main/res/values-pt/strings_neko.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="NekoSettings">Configurações Neko</string>
+    <string name="YuniSettings">Configurações Neko</string>
     <string name="IPv6">Tente conectar-se através do IPv6</string>
     <string name="MessageMenu">Menu de mensagens</string>
     <string name="HidePhone">Ocultar meu número de telefone</string>
@@ -22,7 +22,7 @@
     <string name="TransparentStatusBar">Barra de status transparente</string>
     <string name="EnableResidentNotification">Mostrar uma notificação residencial</string>
     <string name="DisableResidentNotification">Desabilitar notificação de residência</string>
-    <string name="NekogramRunning">Nekogram está funcionando</string>
+    <string name="YunigramRunning">Nekogram está funcionando</string>
     <string name="EventType">Conjunto de ícones barra lateral</string>
     <string name="ChristmasHat">Mostrar chapéu de Natal todos os dias</string>
     <string name="DependsOnDate">Depende da data</string>
