--- a/TMessagesProj/src/main/res/values-ro/strings_neko.xml
+++ b/TMessagesProj/src/main/res/values-ro/strings_neko.xml
@@ -22,7 +22,7 @@
     <string name="TransparentStatusBar">Bară de stare transparentă</string>
     <string name="EnableResidentNotification">Afișează o notificare rezidentă</string>
     <string name="DisableResidentNotification">Dezactivează notificarea rezidentă</string>
-    <string name="NekogramRunning">Nekogram rulează</string>
+    <string name="YunigramRunning">Nekogram rulează</string>
     <string name="EventType">Set pictograme bară laterală</string>
     <string name="ChristmasHat">Arată pălăria de Crăciun zilnic</string>
     <string name="DependsOnDate">În funcție de dată</string>
@@ -127,7 +127,7 @@
     <string name="WsEnableTls">Activați TLS</string>
     <string name="WsLocalProxy">Proxy local</string>
     <string name="WsEnableDoh">Activați DoH</string>
-    <string name="UpdateNekogram">Actualizați Nekogram</string>
+    <string name="UpdateYunigram">Actualizați Nekogram</string>
     <string name="TranslationTarget">Limbă țintă</string>
     <string name="TranslationTargetApp">Urmăriți aplicația</string>
     <string name="Translator">Traducător</string>
