Show message blocked for ignore blocked users

--- a/TMessagesProj/src/main/res/values/strings_neko.xml
+++ b/TMessagesProj/src/main/res/values/strings_neko.xml
@@ -198,6 +198,7 @@
     <string name="CreateMono">Create Monospace</string>
     <string name="CreateMonoLanguage">Code language</string>
     <string name="DoubleTapAction">Double tap action</string>
+    <string name="BlockedUserIgnored">blocked</string>
 
     <!-- Accessibility -->
     <string name="AccessibilitySettings">Accessibility settings</string>
